Bug 169441 - Decouple bullet library items from default levels
Summary: Decouple bullet library items from default levels
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.1 target:26...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Bullet-Number-Outline-Lists 170675
  Show dependency treegraph
 
Reported: 2025-11-14 16:11 UTC by Aron Budea
Modified: 2026-02-09 06:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison screenshot (74.10 KB, image/png)
2025-12-02 18:22 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-11-14 16:11:39 UTC
Seeing the results from bug 166229, its fix and the change in bug 168292, I have the following concerns:
1. Big change to the default view and logic, while users tend to not like sudden, big changes to basic functionality.

2. The original logic repeating 3 levels has changed to unique ones. As far as I can see, 3 levels repeating by default is fairly standard in office applications, that way it's already easy to distinguish between levels even in multilevel lists.

3. The new bullet sizes are disproportionally large compared to the text, which takes the focus away from the content. Based on bug 108697 and duplicates I can see why some of those are preferred in specific cases, but that doesn't mean they should replace the default ones.


What started this whole series of changes is that due to the commit below in bug 108697, while it made the bullets configurable, now the bullet library is directly tied to the default levels, which shouldn't be the case.

I'd add a separate list config that sets the default bullets (+ corresponding font), it starts with the 3 original ones, and the list repeats on further levels. Then the default bullets are still configurable as intended.

https://git.libreoffice.org/core/commit/f944648e0f5d52605a267ed50bba4bfc035aecc6
author		Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Feb 22 11:55:30 2024 +0100
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon Feb 26 13:26:20 2024 +0100

tdf#108697 Allow modifying default bullet selection
Comment 2 Heiko Tietze 2025-12-02 14:43:22 UTC
Didn't I revert/fix this with https://gerrit.libreoffice.org/c/core/+/190626? And the icons, by the way, as well in https://gerrit.libreoffice.org/c/core/+/193029.

(In reply to Aron Budea from comment #0)
> I'd add a separate list config that sets the default bullets (+
> corresponding font), it starts with the 3 original ones, and the list
> repeats on further levels. Then the default bullets are still configurable
> as intended.
Don't get the improvement. Maybe a prototype helps.
Comment 3 Aron Budea 2025-12-02 18:22:17 UTC
Created attachment 204396 [details]
Comparison screenshot

(In reply to Heiko Tietze from comment #2)
> Didn't I revert/fix this with
> https://gerrit.libreoffice.org/c/core/+/190626? And the icons, by the way,
> as well in https://gerrit.libreoffice.org/c/core/+/193029.
Attaching a comparison screenshot of the current version's bulleted list vs. an old one, the issue should be obvious there.

The cause of this is that right now a single expert config (DefaultBullets) populates the default bullet hierarchy and the bullet library (when you open the Toggle Unordered List dropdown button), these should be separate configs. It just needs a different expert config, and probably minimal code changes.
Comment 4 Aron Budea 2026-01-11 13:24:52 UTC
Another relevant commit:
https://git.libreoffice.org/core/commit/626357f53c934e7f57dc80c3c83ad080767961f3
author		Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Jul 11 12:48:29 2024 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Jul 11 17:16:56 2024 +0200

Use configured bullet symbol when clicking bullets button
Comment 5 Commit Notification 2026-01-12 12:25:45 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c12bd0f084e74fe4ca98db50b454af5ef2b96d9

tdf#169441 Decouple default list levels from bullet library items

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 V Stuart Foote 2026-01-12 14:24:55 UTC
+1, splitting the bullet library from the default bullet list elements was needed.

Thanks Aron!
Comment 7 Commit Notification 2026-01-22 10:46:50 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02796c7467903d10e9cc38fc50acce4994537b7a

Related: tdf#169441 Improve description and handling of mismatching config

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-01-22 14:10:37 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8fa60cdf4be2913dc1856693ba45ead768867222

tdf#169441 Decouple default list levels from bullet library items

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-23 05:06:33 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/0611f9cf812d672619403ad43adc588ab5cb70e8

Related: tdf#169441 Improve description and handling of mismatching config

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-01-26 11:11:25 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-0":

https://git.libreoffice.org/core/commit/17c8dec7438fcf35244e3c6ea48a8fff7c022af2

tdf#169441 Decouple default list levels from bullet library items

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-01-27 07:13:27 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e3cfd5ead80eae2fa9f831079ee82a1e3b850012

tdf#169441 Revert "Use configured bullet symbol when clicking

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2026-01-27 07:13:29 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b0510011e9857f418c02b838d9fdb5769a912c70

Related: tdf#169441 sw: Make old list bullet config load properly

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Aron Budea 2026-02-09 06:52:02 UTC
This should be okay now. Opened bug 170675 as follow-up enhancement.