tdf#169441 Decouple default list levels from bullet library items

First commit f944648e0f5d52605a267ed50bba4bfc035aecc6 added
a new config to make bullet library items configurable, then
commit 626357f53c934e7f57dc80c3c83ad080767961f3 switched
from using the set of three default list bullets to bullet
library items.
The configs are DefaultBullets and DefaultBulletsFonts.

The problem is that the bullet library was never meant to
correspond to the default list, and a bulleted list looks
silly now. Let's introduce new configs for the list, with
the old defaults:
DefaultListBullets / DefaultListBulletsFonts

Once reaching the end with increasing levels, the list
wraps around.

Change-Id: I91f6a06e3c298edcfd0d11a3597c23129e0b085d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197014
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 3c12bd0f084e74fe4ca98db50b454af5ef2b96d9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197783
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>